@@ -2,9 +2,11 @@ package edu.mcw.rgd;
 
 import org.apache.log4j.Logger;
 
+import java.util.Set;
+
 /**
  * @author KPulakanti
- * @since Jun 29, 2010, 10:23:23 AM
+ * @since Jun 29, 2010
  * 1. MGI Marker Accession ID	2. Marker Type	3. Feature Type	4. Marker Symbol	5. Marker Name
  * 6. Chromosome	7. Start Coordinate	8. End Coordinate	9. Strand	10. Genome Build
  * 11. Provider Collection	12. Provider Display
@@ -13,6 +15,8 @@ import org.apache.log4j.Logger;
  * MGI:87906	Gene	protein coding gene	Actg1	actin, gamma, cytoplasmic 1	11	120345690	120348542	-	GRCm38	VEGA Gene Model	VEGA
  */
 public class FileCoordParser extends FileParser {
+
+    private Set<String> knownGenomeBuilds;
 
     Logger log = Logger.getLogger("core");
 
@@ -52,7 +56,19 @@ public class FileCoordParser extends FileParser {
         data.setStrand(columns[8]);
         data.setGenomeBuild(columns[9]);
 
+        if( !getKnownGenomeBuilds().contains(data.getGenomeBuild()) ) {
+            throw new Exception("ERROR: Unknown genome build: "+data.getGenomeBuild()+"; add the new genome build to AppConfigure.xml file");
+        }
+
         log.debug(mgiId+" markname="+columns[3]+" chr="+data.getChromosome()+" start="+data.getStart()+" stop="+data.getStop());
+    }
+
+    public Set<String> getKnownGenomeBuilds() {
+        return knownGenomeBuilds;
+    }
+
+    public void setKnownGenomeBuilds(Set<String> knownGenomeBuilds) {
+        this.knownGenomeBuilds = knownGenomeBuilds;
     }
 }
 
