@@ -1,3 +1,6 @@
+Jun 10, 2021
+  added handling of GRCm39 assembly
+
 May 13, 2021
   tuned up logging
 
